# TinyDeal

./: CMakeLists.txt  README.md
src/: gameStructure.cpp  holdEmRules.cpp  playerSets.cpp
src/includes/: cards.h  gameStructure.h  holdEmRules.h  playerSets.h
